--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 
   <div class="">
-    <p>情報更新日：<span class="js-todayElm"></span></p>
-    <p>次回情報更新日：<span class="js-nextElm"></span></p>
-    <p>取引条件の有効期限：<span class="js-nextElm"></span></p>
+    <p>情報更新日：<span class="js-todayElm" data-config=""></span></p>
+    <p>次回情報更新日：<span class="js-nextElm" data-config=""></span></p>
+    <p>取引条件の有効期限：<span class="js-disElm" data-config=""></span></p>
   </div>
 </body>
 </html>
